# memorai

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  db.rs  embeddings.rs  main.rs  models.rs  profile.rs  server.rs
