[package]
name = "memorai"
version = "0.1.0"
edition = "2021"
description = "Local-first AI memory system with semantic search"
license = "MIT"
repository = "https://github.com/iamngoni/memorai"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
surrealdb = { version = "2", features = ["kv-rocksdb"] }
tracing = "0.1"
tracing-subscriber = "0.3"
